--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -19,11 +20,13 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mocha": "^7.1.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^8.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "nodemon": "^1.19.4",
+    "postgrator-cli": "^3.3.0",
     "supertest": "^4.0.2"
   }
 }
