--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
     "mocha": "^7.1.2",
     "morgan": "^1.9.1",
     "pg": "^8.0.3"
