--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "knex": "^0.21.1",
     "mocha": "^7.1.2",
     "morgan": "^1.9.1",
-    "pg": "^8.0.3"
+    "multer": "^1.4.2",
+    "pg": "^8.0.3",
+    "tesseract.js": "^2.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
