--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
@@ -31,7 +32,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "nodemon": "^1.19.4",
-    "postgrator-cli": "^3.3.0",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
